--- a/k8s/cert-manager/wildcard.yaml
+++ b/k8s/cert-manager/wildcard.yaml
@@ -3,6 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: wildcard
+  namespace: default
 spec:
   secretName: wildcard-tls
   duration: 2160h # 90d
